--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="12dp"
-                app:cardCornerRadius="12dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="0dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -41,9 +41,9 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
+                        android:fontFamily="sans-serif-medium"
                         android:text="Current Balance"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -52,9 +52,9 @@
                         android:id="@+id/textViewCurrentBalanceAmount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-medium"
                         android:text="Calculating..."
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
                         app:layout_constraintStart_toStartOf="@+id/textViewBalance"
                         app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />
@@ -66,8 +66,8 @@
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-medium"
                         android:text="$216.33 (1.51%)"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-                        android:textSize="10sp"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                        android:textColor="@color/colorPrimaryDark"
                         app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
                         app:layout_constraintStart_toStartOf="@+id/textViewCurrentBalanceAmount"
                         app:layout_constraintTop_toBottomOf="@+id/textViewCurrentBalanceAmount" />
@@ -75,7 +75,7 @@
                     <com.robinhood.spark.SparkView
                         android:id="@+id/sparkView"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="150dp"
                         android:layout_marginTop="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -85,62 +85,113 @@
 
                     <TextView
                         android:id="@+id/textViewOneMonth"
-                        android:layout_width="35dp"
-                        android:layout_height="25dp"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="16dp"
                         android:gravity="center"
                         android:padding="4dp"
                         android:text="1M"
+                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/textViewThreeMonths"
                         app:layout_constraintStart_toStartOf="@+id/sparkView"
                         app:layout_constraintTop_toBottomOf="@+id/sparkView" />
 
                     <TextView
                         android:id="@+id/textViewThreeMonths"
-                        android:layout_width="35dp"
-                        android:layout_height="25dp"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:gravity="center"
                         android:padding="4dp"
                         android:text="3M"
+                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/textViewOneMonth"
                         app:layout_constraintEnd_toStartOf="@+id/textViewOneYear"
                         app:layout_constraintStart_toEndOf="@+id/textViewOneMonth"
                         app:layout_constraintTop_toTopOf="@+id/textViewOneMonth" />
 
                     <TextView
                         android:id="@+id/textViewOneYear"
-                        android:layout_width="35dp"
-                        android:layout_height="25dp"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="32dp"
                         android:gravity="center"
                         android:padding="4dp"
                         android:text="1Y"
+                        android:textAlignment="center"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                         android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/textViewThreeMonths"
                         app:layout_constraintEnd_toEndOf="@+id/sparkView"
                         app:layout_constraintStart_toEndOf="@+id/textViewThreeMonths"
                         app:layout_constraintTop_toTopOf="@+id/textViewThreeMonths" />
+
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="0.75dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="16dp"
+                        android:background="?android:attr/listDivider"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textViewThreeMonths" />
+
+                    <FrameLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/divider">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/textViewMonthlyActivity"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:text="Monthly Activity"
+                                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/imageView2"
+                                android:layout_width="16dp"
+                                android:layout_height="0dp"
+                                android:layout_marginEnd="12dp"
+                                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+                                app:layout_constraintBottom_toBottomOf="@+id/textViewMonthlyActivity"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/textViewMonthlyActivity" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </FrameLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/textViewLatestTransaction"
+                android:id="@+id/textViewLatestTransactions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -156,7 +207,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="12dp"
-                app:cardCornerRadius="12dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="0dp">
 
                 <androidx.recyclerview.widget.RecyclerView
