--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -5,7 +5,8 @@
     android:id="@+id/constraintLayoutTransactionItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/textViewTransactionName"
@@ -63,8 +64,8 @@
     <ImageView
         android:id="@+id/imageViewTransactionArrow"
         android:layout_width="16dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/textViewTransactionAmount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewTransactionAmount"
@@ -73,7 +74,7 @@
     <View
         android:id="@+id/viewTransactionDivider"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.75dp"
         android:layout_marginStart="16dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
