--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -87,21 +87,25 @@
                 android:id="@+id/textViewTransactionDetailChannel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Paid Online"
-                app:layout_constraintEnd_toEndOf="@+id/textViewTransactionDetailStatus"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textViewTransactionDetailAccountMask"
                 app:layout_constraintStart_toStartOf="@+id/textViewTransactionDetailStatus"
                 app:layout_constraintTop_toBottomOf="@+id/textViewTransactionDetailStatus" />
 
             <TextView
-                android:id="@+id/textViewTransactionDetailAccountName"
+                android:id="@+id/textViewTransactionDetailAccountMask"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Chase Credit Card"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/textViewTransactionDetailChannel"
-                app:layout_constraintStart_toStartOf="@+id/textViewTransactionDetailChannel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewTransactionDetailChannel" />
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:text="•••• 9999"
+                android:textAlignment="viewEnd"
+                app:layout_constraintBottom_toBottomOf="@+id/textViewTransactionDetailChannel"
+                app:layout_constraintEnd_toEndOf="@+id/textViewTransactionDetailStatus"
+                app:layout_constraintStart_toEndOf="@+id/textViewTransactionDetailChannel"
+                app:layout_constraintTop_toTopOf="@+id/textViewTransactionDetailChannel" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
