--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -145,6 +145,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textViewThreeMonths" />
 
                     <FrameLayout
+                        android:id="@+id/frameLayoutMonthlyActivity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
