--- a/app/src/main/res/layout/fragment_transaction_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_transaction_monthly_activity_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFEFEF"
     tools:context=".TransactionMonthlyActivityItemFragment">
 
     <TextView
@@ -13,7 +14,9 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:text="TextView"
+        android:fontFamily="sans-serif-medium"
+        android:text="July 2020"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +25,9 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="@id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
@@ -31,7 +37,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textViewBudgetName1"
+                android:id="@+id/textViewBudgetName0"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -42,43 +48,167 @@
                 android:text="Shopping"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider1"
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider0"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/viewBudgetDivider0"
+                android:layout_width="match_parent"
+                android:layout_height="0.75dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName1"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName0" />
+
+            <TextView
+                android:id="@+id/textViewBudgetName1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lines="1"
+                android:text="Food &amp; Drinks"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider1"
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider0" />
 
             <View
                 android:id="@+id/viewBudgetDivider1"
                 android:layout_width="match_parent"
                 android:layout_height="0.75dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
                 android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName2"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName1" />
 
             <TextView
                 android:id="@+id/textViewBudgetName2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="1dp"
+                android:layout_marginBottom="8dp"
                 android:lines="1"
-                android:text="Shopping"
+                android:text="Travel"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/viewBudgetDivider1"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBudgetName1" />
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider2"
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider1" />
 
             <View
                 android:id="@+id/viewBudgetDivider2"
                 android:layout_width="match_parent"
                 android:layout_height="0.75dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
                 android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName3"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName2" />
+
+            <TextView
+                android:id="@+id/textViewBudgetName3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lines="1"
+                android:text="Entertainment"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider3"
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider2" />
+
+            <View
+                android:id="@+id/viewBudgetDivider3"
+                android:layout_width="match_parent"
+                android:layout_height="0.75dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName4"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName3" />
+
+            <TextView
+                android:id="@+id/textViewBudgetName4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lines="1"
+                android:text="Health"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider4"
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider3" />
+
+            <View
+                android:id="@+id/viewBudgetDivider4"
+                android:layout_width="match_parent"
+                android:layout_height="0.75dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName5"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName4" />
+
+            <TextView
+                android:id="@+id/textViewBudgetName5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lines="1"
+                android:text="Services"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/viewBudgetDivider5"
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider4" />
+
+            <View
+                android:id="@+id/viewBudgetDivider5"
+                android:layout_width="match_parent"
+                android:layout_height="0.75dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/textViewBudgetName6"
+                app:layout_constraintEnd_toEndOf="@id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/textViewBudgetName5" />
+
+            <TextView
+                android:id="@+id/textViewBudgetName6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lines="1"
+                android:text="Transportation"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toEndOf="@+id/textViewBudgetName0"
+                app:layout_constraintStart_toStartOf="@+id/textViewBudgetName0"
+                app:layout_constraintTop_toBottomOf="@id/viewBudgetDivider5" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
