--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,10 +15,6 @@
         android:layout_marginTop="150dp"
         android:layout_marginEnd="24dp"
         android:hint="Phone number or email"
-        app:boxCornerRadiusBottomEnd="8dp"
-        app:boxCornerRadiusBottomStart="8dp"
-        app:boxCornerRadiusTopEnd="8dp"
-        app:boxCornerRadiusTopStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -42,10 +38,6 @@
         android:hint="Password"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
-        app:boxCornerRadiusBottomEnd="8dp"
-        app:boxCornerRadiusBottomStart="8dp"
-        app:boxCornerRadiusTopEnd="8dp"
-        app:boxCornerRadiusTopStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutLoginUsername">
@@ -69,7 +61,7 @@
         android:text="Log In"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@+id/textForgotPassword"
         app:layout_constraintEnd_toEndOf="@+id/layoutLoginPassword"
         app:layout_constraintStart_toStartOf="@+id/layoutLoginPassword" />
