--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:text="Sign Up"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@+id/text_log_in"
         app:layout_constraintEnd_toEndOf="@+id/text_welcome_caption"
         app:layout_constraintHorizontal_bias="0.0"
