--- a/app/src/main/res/layout/activity_mobile_number.xml
+++ b/app/src/main/res/layout/activity_mobile_number.xml
@@ -24,13 +24,13 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputLayoutMobileNumber"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="@+id/textMobileNumber"
         app:layout_constraintStart_toStartOf="@+id/textMobileNumber"
-        app:layout_constraintTop_toBottomOf="@+id/textMobileNumber"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        app:layout_constraintTop_toBottomOf="@+id/textMobileNumber">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextMobileNumber"
@@ -50,7 +50,7 @@
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/inputLayoutMobileNumber"
         app:layout_constraintStart_toStartOf="@+id/inputLayoutMobileNumber" />
