--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -68,7 +68,7 @@
         android:text="Continue"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size"
-        app:cornerRadius="@dimen/corner_radius"
+        app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/inputLayoutFirstName"
         app:layout_constraintStart_toStartOf="@+id/inputLayoutFirstName" />
