--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="corner_radius">25sp</dimen>
+    <dimen name="button_corner_radius">24sp</dimen>
+    <dimen name="text_field_corner_radius">8sp</dimen>
     <dimen name="inset_bottom">0dp</dimen>
     <dimen name="inset_top">0dp</dimen>
     <dimen name="text_size">18sp</dimen>
