--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,9 @@
         <item name="colorOnBackground">@color/colorOnBackground</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textAllCaps">false</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/text_field_corner_radius</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/text_field_corner_radius</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/text_field_corner_radius</item>
+        <item name="boxCornerRadiusTopStart">@dimen/text_field_corner_radius</item>
     </style>
 </resources>
