--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayoutHomeFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEFEF"
+    android:background="#F1F1F1"
     tools:context=".ui.home.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
